fix navbar z-index

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,10 +9,14 @@ body {
 
 header {
   height: 10vh;
+  position: relative;
 }
 
 .navbar {
   position: fixed;
+  z-index: 1;
+  background-color: white;
+
   width: 100%;
   border: 5px solid purple;
   display: flex;
@@ -20,6 +24,7 @@ header {
   align-items: center;
   height: 10vh;
   margin: 0 auto;
+
   &__menu {
     display: flex;
     margin: 0 auto; // overrides the center positioning for toggle
@@ -315,7 +320,7 @@ header {
       opacity: 1;
       transform: translateX(200%);
       overflow-x: hidden;
-      transition: all 0.5s ease-in-out;
+      // transition: all 0.5s ease-in-out;
     }
 
     &__menu.active {
